--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ div.keyTable {
 h1.tc {
 	font-family: 'Josefin Sans', sans-serif;
 	color: white;
-	font-size: 3.7em;
+	font-size: calc(30px + 1.5vw);
 	padding-bottom: 27px;
 }
 
@@ -34,6 +34,7 @@ h1.tc {
 	font-family: 'Josefin Sans';
 	font-weight: 700;
 	margin-top: 25px;
+	font-size:1.2vw;
 }
 
 ul.dropdown-menu {
@@ -52,11 +53,10 @@ div.color {
 	margin-bottom: 0px;
 }
 
-p.guideInstructions {
+.guideInstructions {
 	border: 2px solid black;
 	padding: 10px 10px 10px 10px;
 	background-color: #5E8091;
-	font-size: 14px;
 }
 
 div.row {
@@ -65,6 +65,10 @@ div.row {
 	font-family: 'Josefin Sans', sans-serif;	
 	margin-right: 0px;
 	margin-left: 0px;
+}
+
+.draftGuideText {
+	font-size: 1.1vw;
 }
 
 div.insideRow {
@@ -79,7 +83,7 @@ span.navbar-brand {
 .col-sm-6 p {
 	line-height: 2;
 	letter-spacing: 1.2px;
-	font-size: 1.75em;
+	font-size: 2.1vw;
 	font-family: 'Josefin Sans', sans-serif;
 }
 
@@ -89,7 +93,7 @@ span.navbar-brand {
 
 .rankh2 {
 	letter-spacing: 1.9px;
-	font-size: 3.7em;
+	font-size: 5.5vw;
 	font-family: 'Josefin Sans', sans-serif;
 }
 
